--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,5 @@
-p{font-family:"Trebuchet MS", Helvetica, sans-serif;font-size:18px;padding-left:5px;}
+p { font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:18px; padding-left:5px; }
+
+.axis {font: 10px sans-serif;}
+
+.axis path, .axis line { fill: none; stroke: #000; shape-rendering: crispEdges; }
