--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 p { font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:18px; padding-left:5px; }
+h1 { font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:24px; padding-left:5px; }
 
 .axis {font: 10px sans-serif;}
 
