--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,17 @@ p { font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:18px; padding-l
 h1 { font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:24px; padding-left:5px; }
 
 .axis {font: 10px sans-serif;}
-
 .axis path, .axis line { fill: none; stroke: #000; shape-rendering: crispEdges; }
+
+div.tooltip {	  
+  position: absolute;			
+  text-align: center;					
+  width: 60px;									
+  height: 28px;													
+  padding: 2px;													   
+  font: 12px sans-serif;												    
+  background: lightsteelblue;												    
+  border: 0px;													     
+  border-radius: 8px;													       
+  pointer-events: none;												         
+}
